[gd_scene load_steps=11 format=3 uid="uid://du767nvbv3ym0"]

[ext_resource type="Script" path="res://scripts/controllers/hub_controller.gd" id="1_jfsct"]
[ext_resource type="Texture2D" uid="uid://dmstjgr12p5ox" path="res://assets/ui/hub.png" id="2_ipq0h"]
[ext_resource type="Texture2D" uid="uid://7asn1jjg2562" path="res://assets/g1.png" id="3_b4c1e"]
[ext_resource type="Texture2D" uid="uid://byiv04vmmhgmy" path="res://assets/text_box.png" id="4_6s60k"]
[ext_resource type="Texture2D" uid="uid://85ircwk8a6sj" path="res://assets/g2.png" id="4_f3qtv"]
[ext_resource type="Script" path="res://scripts/controllers/text_box.gd" id="5_8evug"]
[ext_resource type="Texture2D" uid="uid://e5h6dhbohe2k" path="res://assets/g3.png" id="5_bml7l"]

[sub_resource type="LabelSettings" id="LabelSettings_if820"]
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_cycq4"]
font_size = 28
font_color = Color(0.838897, 0.838897, 0.838897, 1)

[sub_resource type="LabelSettings" id="LabelSettings_appkt"]
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 10
outline_color = Color(0.734648, 0.555744, 1, 1)

[node name="HubController" type="Node2D"]
script = ExtResource("1_jfsct")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(800, 450)
texture = ExtResource("2_ipq0h")

[node name="Map" type="Button" parent="."]
offset_left = 35.0
offset_top = 200.0
offset_right = 285.0
offset_bottom = 300.0

[node name="Label" type="Label" parent="Map"]
layout_mode = 0
offset_left = 36.0
offset_top = 23.0
offset_right = 216.0
offset_bottom = 73.0
text = "Open Map"
label_settings = SubResource("LabelSettings_if820")

[node name="NpcGhost1" type="TextureButton" parent="."]
visible = false
offset_left = 531.0
offset_top = 246.0
offset_right = 595.0
offset_bottom = 310.0
scale = Vector2(4, 4)
texture_normal = ExtResource("3_b4c1e")

[node name="NpcGhost2" type="TextureButton" parent="."]
visible = false
offset_left = 793.0
offset_top = 34.0
offset_right = 857.0
offset_bottom = 98.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_f3qtv")

[node name="NpcGhost3" type="TextureButton" parent="."]
visible = false
offset_left = 1095.0
offset_top = 230.0
offset_right = 1159.0
offset_bottom = 294.0
scale = Vector2(4, 4)
texture_normal = ExtResource("5_bml7l")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 450)

[node name="TextBox" type="TextureButton" parent="Camera2D"]
visible = false
offset_left = -407.0
offset_top = 181.0
offset_right = 393.0
offset_bottom = 381.0
texture_normal = ExtResource("4_6s60k")
script = ExtResource("5_8evug")

[node name="Label" type="Label" parent="Camera2D/TextBox"]
layout_mode = 0
offset_left = 18.0
offset_top = 71.0
offset_right = 751.0
offset_bottom = 171.0
text = "This is a test"
label_settings = SubResource("LabelSettings_cycq4")

[node name="Name" type="Label" parent="Camera2D/TextBox"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 133.0
offset_bottom = 69.0
text = "Name"
label_settings = SubResource("LabelSettings_appkt")

[node name="GhostEditor" type="Button" parent="."]
offset_left = 35.0
offset_top = 350.0
offset_right = 285.0
offset_bottom = 450.0

[node name="Label" type="Label" parent="GhostEditor"]
offset_left = 32.0
offset_top = 24.0
offset_right = 228.0
offset_bottom = 74.0
text = "Edit Ghosts"
label_settings = SubResource("LabelSettings_if820")

[connection signal="pressed" from="Map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="NpcGhost1" to="." method="_on_npc_ghost_1_pressed"]
[connection signal="pressed" from="NpcGhost2" to="." method="_on_npc_ghost_2_pressed"]
[connection signal="pressed" from="NpcGhost3" to="." method="_on_npc_ghost_3_pressed"]
[connection signal="pressed" from="GhostEditor" to="." method="_on_ghost_editor_pressed"]
